# flash-shot

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  linux-platform-validation.md  plan.md  requirements.md  windows-capture-validation.md  windows-distribution.md
installer/: flash-shot.iss
scripts/: check-linux-feasibility.sh  generate-icons.ps1  measure-release-capture.ps1  measure-release-startup.ps1  package-installer.ps1  package-portable.ps1  release-manifest.ps1  smoke-portable-startup.ps1  test-portable-package.ps1  test-release-manifest.ps1  test-release-tag.ps1  test-verify-github-release.ps1  test-verify-release-assets.ps1  verify-github-release.ps1  verify-portable-package.ps1  verify-release-assets.ps1  verify-release-tag.ps1
src/: annotation_stress.rs  app.rs  capture_stress.rs  diagnostics.rs  history.rs  image.rs  lib.rs  main.rs  ocr.rs  performance.rs  performance_report.rs  recording.rs  scroll.rs  settings.rs  single_instance.rs  theme.rs  translation.rs  update.rs
src/app/: overlay.rs  pinned.rs  render_image.rs  scroll_control.rs  view.rs  workflow.rs
src/domain/: annotation.rs  geometry.rs  mod.rs  roadmap.rs  selection.rs  session.rs
src/platform/: autostart.rs  capture.rs  clipboard.rs  cursor.rs  directory.rs  display.rs  mod.rs  process_group.rs  process_pause.rs  scroll.rs  shortcut.rs  tray.rs  window_inspector.rs  window_visibility.rs
