[package]
name = "flash-shot"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "A fast, native screenshot and screen recording tool built with Rust and GPUI"
repository = "ssh://git@github.com/bruceblink/flash-shot.git"
license = "AGPL-3.0-only"
readme = "README.md"
keywords = ["screenshot", "screen-recording", "desktop", "gpui"]
categories = ["multimedia::images", "gui"]

[dependencies]
async-channel = "2.5"
gpui = { git = "https://github.com/zed-industries/zed", rev = "819fe337999551ce8177b14c8db1127645617ae4" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "819fe337999551ce8177b14c8db1127645617ae4", features = ["font-kit"] }
log = { version = "0.4.28", features = ["std"] }
directories = "6.0"
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "94b0f28166665e8fd2f53ff6d268a14955c82269", package = "zed-font-kit", version = "0.14.1-zed" }
image = { version = "0.25.1", default-features = false }
pathfinder_geometry = "0.5"
png = "0.18"
raw-window-handle = "0.6"
serde_json = "1.0"
tokio = { version = "1.53", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1.48"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_Diagnostics_ToolHelp", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
